# ComparePro

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: imgui.ini  main.cpp
src/Comparator/: Comparator.cpp  Comparator.h
src/CompareFile/: CompareFile.cpp  CompareFile.h
src/FileDisplay/: FileDisplay.cpp  FileDisplay.h
src/FileDisplay/LoadFileWindow/: LoadFileWindow.cpp  LoadFileWindow.h
src/FileHandler/: FileHandler.cpp  FileHandler.h
src/Utils/: Utils.cpp  Utils.h  imgui.ini
src/common/: common_def.h
test/src/: TestCompareFile.cpp  TestFileDisplay.cpp  TestFileHandler.cpp  TestLoadFileWindow.cpp  TestMain.cpp  TestUtils.cpp
